# mcp_agent_test

./: .env  README.md  autogen_agent.py  client.py  dialogue_server.py  pyproject.toml  requirements.txt  server.py  test_autogen.py
mcp_agents/: __init__.py  agent_manager.py  custom_agent.py  dialogue_agent.py  formatter_agent.py  planner_agent.py  postgres_agent.py
